--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
 .container {
   width: 100%;
   display: flex;
-  height: 100%;
+  min-height: 100%;
   -webkit-box-shadow: 0px 0px 2.4rem 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 2.4rem 0px rgba(0,0,0,0.75);
   box-shadow: 0px 0px 2.4rem 0px rgba(0,0,0,0.75);
@@ -72,7 +72,7 @@ body {
   align-items: center;
   margin-top: 5rem;
   flex-direction: column;
-  height: 70%;
+  min-height: 70%;
 }
 
 .all-books {
@@ -921,17 +921,44 @@ label {
   align-items: center;
   flex-direction: column;
 }
-.table-order {
+.table-order,.table-order-single {
   border: 3px solid #38af38;
   width: 50%;
   margin: 4rem 0 2rem 0;
   padding: 1rem;
 }
-.td {
+.table-order-single {
+  width: 70%;
+}
+.td,.td-2 {
   width: 50%;
   text-align: left;
   padding: 2rem;
   font-size: 2rem;
   border-top: 1px solid #333;
   border-right: 1px solid #333;
+}
+.td-2 {
+  width: 30%;
+  padding: 1rem;
+  text-align: center;
+}
+.order-title {
+  width: 50%;
+}
+
+
+.bold {
+  font-weight: 900;
+}
+.your-books {
+  text-transform: uppercase;
+  color: #ffd20c;
+  background: rgb(102, 102, 102);
+  border: none;
+  text-align: center;
+}
+.order-img {
+  width: 10rem;
+  height: 15rem;
 }
