--- a/src/App.css
+++ b/src/App.css
@@ -263,7 +263,7 @@ body {
   text-align: center;
   background: #ffd20c;
   width: 35%;
-  height: 50vh;
+  min-height: 50vh;
   padding: 2rem;
   padding-top: 4rem;
   margin: 0 auto;
@@ -390,8 +390,8 @@ body {
 .container-registration {
   text-align: center;
   background: #ffd20c;
-  min-width: 35%;
-  height: 60vh;
+  width: 35%;
+  min-height: 60vh;
   padding: 2rem;
 }
 label {
@@ -971,12 +971,24 @@ label {
   .details {
     font-size: 1rem;
   }
+  .btn-add {
+    font-size: 1.3rem;
+  }
+  .container-sign {
+    width: 40%;
+  }
+  .container-registration {
+    width: 40%;
+  }
 }
 
 
 @media (min-width: 1600px){
   html {
     font-size: 10px;
+  }
+  .details {
+    font-size: 1.3rem;
   }
 }
 
