--- a/src/App.css
+++ b/src/App.css
@@ -964,6 +964,16 @@ label {
 }
 
 
+
+@media (min-width: 1600px){
+  html {
+    font-size: 10px;
+  }
+  .details {
+    font-size: 1.3rem;
+  }
+}
+
 @media (min-width: 1200px) {
   html {
     font-size: 8px;
@@ -979,19 +989,9 @@ label {
   }
   .container-registration {
     width: 40%;
+    background: red;
   }
 }
-
-
-@media (min-width: 1600px){
-  html {
-    font-size: 10px;
-  }
-  .details {
-    font-size: 1.3rem;
-  }
-}
-
 
 
 
