--- a/src/App.css
+++ b/src/App.css
@@ -976,6 +976,7 @@ label {
   }
   .container-sign {
     width: 40%;
+    min-height: 60vh;
   }
   .container-registration {
     width: 40%;
@@ -987,8 +988,11 @@ label {
   html {
     font-size: 10px;
   }
-  .details {
+  .btn-add {
     font-size: 1.3rem;
+  }
+  .details {
+    font-size: 1rem;
   }
 }
 
