--- a/src/App.css
+++ b/src/App.css
@@ -996,6 +996,14 @@ label {
   }
 }
 
+@media (max-width: 700px) and (orientation: portrait) {
+  html {
+    font-size: 4px;
+  }
+  .container {
+    flex-direction: column;
+  }
+}
 
 
 
