--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@ body {
 .container-books {
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   grid-template-rows: repeat(2,1fr);
   grid-gap: 0;
   padding: 5rem;
@@ -900,7 +900,7 @@ label {
   width: 95%;
   height: auto;
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   background:#333;
   grid-gap: 4rem;
   padding: 5rem;
@@ -1019,11 +1019,64 @@ label {
   .para {
     width: 80%;
   }
+  .sign {
+    margin-top: 5rem;
+    display: inline-block;
+  }
+  .container-books {
+    min-height: 100vh;
+    margin-top: 30rem;
+  }
   .menu-list {
     margin-top: 20rem;
   }
-  .container-books {
-    width:30rem;
+  .item {
+    width: 100%;
+  }
+  .item-cover {
+    height: 50%;
+    width: 30%;
+  }
+  .item-details {
+    width: 40%;
+  }
+  .container-sign {
+    width: 100%;
+  }
+  .form > label {
+    font-size: 3rem;
+  }
+  .container-registration {
+    width: 100%;
+  }
+  .panel-left {
+    width: 100%;
+    height: 50vh;
+  }
+  .panel-right {
+    min-height: 100vh;
+  }
+  .container-panel {
+    min-height: 100vh;
+    flex-direction: column;
+  }
+  .hr-inpt {
+    width: 80%
+  }
+  .user-btn-actions {
+    width: 60%;
+  }
+  .failed-sign {
+    width: 100%;
+  }
+  .thanks-container {
+    width: 90%;
+  }
+  .table-order {
+    width: 100%;
+  }
+  .table-order-single {
+    width: 100%;
   }
 }
 
