--- a/src/App.css
+++ b/src/App.css
@@ -1042,12 +1042,14 @@ label {
   }
   .container-sign {
     width: 100%;
+    height: 80vh;
   }
   .form > label {
     font-size: 3rem;
   }
   .container-registration {
     width: 100%;
+    height: 80vh;
   }
   .panel-left {
     width: 100%;
