--- a/src/App.css
+++ b/src/App.css
@@ -1041,15 +1041,15 @@ label {
     width: 40%;
   }
   .container-sign {
-    width: 100%;
-    height: 60vh;
+    min-width: 100%;
+    min-height: 60vh;
   }
   .form > label {
     font-size: 3rem;
   }
   .container-registration {
-    width: 100%;
-    height: 80vh;
+    min-width: 100%;
+    min-height: 80vh;
   }
   .panel-left {
     width: 100%;
