--- a/src/App.css
+++ b/src/App.css
@@ -1043,7 +1043,7 @@ label {
   }
   .container-sign {
     min-width: 90%;
-    min-height: 70vh;
+    min-height: 60vh;
   }
   .form > label {
     font-size: 2rem;
@@ -1076,7 +1076,7 @@ label {
     width: 60%;
   }
   .failed-sign {
-    width: 100%;
+    width: 90%;
   }
   .thanks-container {
     width: 90%;
@@ -1087,7 +1087,25 @@ label {
   .table-order-single {
     width: 100%;
   }
-
+  .container-single-book {
+    flex-direction: column;
+    min-height: 70vh;
+    width: 100%;
+  }
+  .img-single-book {
+    width: 50%;
+    height: 30vh;
+    order: 2;
+  }
+  .img-single-book > img {
+    width: 100%;
+    height: 100%;
+  }
+  .content-single-book {
+    width: 100%;
+    height: 40vh;
+    order: 1;
+  }
 }
 
 
