--- a/src/App.css
+++ b/src/App.css
@@ -962,7 +962,9 @@ label {
   width: 10rem;
   height: 15rem;
 }
-
+.empty-basket {
+  font-size: 2rem;
+}
 
 @media (min-width: 1200px) {
   html {
@@ -1038,9 +1040,6 @@ label {
     height: 50%;
     width: 30%;
   }
-  .item-details {
-    width: 40%;
-  }
   .container-sign {
     min-width: 90%;
     min-height: 60vh;
@@ -1053,10 +1052,14 @@ label {
   }
   .input {
     padding: .3rem;
+    font-size: 2rem;
   }
   .container-registration {
     min-width: 90%;
     min-height: 80vh;
+  }
+  .heading-3 {
+    font-size: 3rem;
   }
   .panel-left {
     width: 100%;
@@ -1098,13 +1101,21 @@ label {
     order: 2;
   }
   .img-single-book > img {
-    width: 100%;
+    width: 90%;
     height: 100%;
   }
   .content-single-book {
     width: 100%;
-    height: 40vh;
+    min-height: 40%;
     order: 1;
+  }
+  .item-details {
+    width: 60%;
+    margin-left: 6rem;
+  }
+  .cart-buy {
+    font-size: 2rem;
+    padding: 2rem 1rem;
   }
 }
 
