--- a/src/App.css
+++ b/src/App.css
@@ -1051,8 +1051,8 @@ label {
     font-size: 2rem;
   }
   .input {
-    padding: .3rem;
-    font-size: 2rem;
+    padding: 1rem;
+    font-size: 2.2rem;
   }
   .container-registration {
     min-width: 90%;
