--- a/src/App.css
+++ b/src/App.css
@@ -562,7 +562,7 @@ label {
   padding: 2rem;
   text-align: center;
   height: auto;
-  width: 35%;
+  width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -852,7 +852,7 @@ label {
 }
 .input-cart {
   text-align: center;
-  background: red;
+  /* background: red; */
   font-size: 1px;
 }
 .cart-buy {
@@ -999,6 +999,9 @@ label {
   }
   .details {
     font-size: 1.2rem;
+  }
+  .menu-list {
+    margin-top: 2rem;
   }
 }
 
